Add option to enable testing only

--- a/config_files/TrajFusionNet.yaml
+++ b/config_files/TrajFusionNet.yaml
@@ -1,9 +1,9 @@
 model_opts:
-  model: MultiBranchGraphTFV7
+  model: TrajFusionNet
   apply_class_weights: True
   generator: True
-  obs_input_type: [scene_context_with_running_ped_v2, 
-                   scene_context_with_running_ped_v2_doubled,
+  obs_input_type: [scene_context_with_ped_overlays, 
+                   scene_context_with_ped_overlays_doubled,
                    box, veh_speed]
   frameworks:
     pytorch: True
