--- a/config_files/VAN.yaml
+++ b/config_files/VAN.yaml
@@ -1,6 +1,6 @@
 model_opts:
-  model: VisionTransformer
-  obs_input_type: [scene_context_with_segmentation_v3]
+  model: VAN
+  obs_input_type: [scene_context_with_ped_overlays]
   apply_class_weights: True
   generator: True
   frameworks:
@@ -11,7 +11,7 @@ model_opts:
     enabled: True
     static_features_indexes: [0]
 exp_opts:
-  datasets: [pie]
+  datasets: [jaad_all]
   batch_size: [16, 4, 4]
-  epochs: [5, 6, 6]
-  lr: [5.0e-06, 5.0e-06, 5.0e-06]
+  epochs: [15, 6, 6]
+  lr: [5.0e-05, 5.0e-05, 5.0e-05]
