--- a/config_files/configs_default.yaml
+++ b/config_files/configs_default.yaml
@@ -20,7 +20,7 @@ data_opts:
   sample_type: beh  # beh or all only when model_opts/dataset is set to jaad
   subset: default
   data_split_type: default  # kfold, random, default
-  seq_type: trajectory
+  seq_type: crossing
   min_track_size: 16 # tracks shorter than this length will be discarded
                      # default = 16
 net_opts:
