--- a/config_files/TrajectoryTransformer.yaml
+++ b/config_files/TrajectoryTransformer.yaml
@@ -31,7 +31,7 @@ model_opts:
       cell_type: gru
       backbone: vgg16
 exp_opts:
-  datasets: [pie]
+  datasets: [jaad_beh]
   batch_size: [64, 4, 4]
   epochs: [40, 40, 40]
   lr: [5.0e-05, 5.0e-06, 5.0e-06]
