--- a/config_files/TrajFusionNet.yaml
+++ b/config_files/TrajFusionNet.yaml
@@ -33,6 +33,6 @@ model_opts:
       backbone: vgg16
 exp_opts:
   datasets: [pie]
-  batch_size: [16, 4, 4]
-  epochs: [30, 40, 40]
-  lr: [5.0e-05, 5.0e-06, 5.0e-06]
+  batch_size: [16]
+  epochs: [10]
+  lr: [5.0e-06]
