--- a/config_files/TrajectoryTransformer.yaml
+++ b/config_files/TrajectoryTransformer.yaml
@@ -32,6 +32,6 @@ model_opts:
       backbone: vgg16
 exp_opts:
   datasets: [jaad_beh]
-  batch_size: [64, 4, 4]
-  epochs: [40, 40, 40]
-  lr: [5.0e-05, 5.0e-06, 5.0e-06]
+  batch_size: [64]
+  epochs: [1]
+  lr: [5.0e-05]
