--- a/config_files/VAN_previous.yaml
+++ b/config_files/VAN_previous.yaml
@@ -7,11 +7,11 @@ model_opts:
     pytorch: True
     hugging_faces: True
     multi-gpu: False
-  process_input_features: 
+  process_input_features:
     enabled: True
     static_features_indexes: [0]
 exp_opts:
   datasets: [jaad_beh]
-  batch_size: [16, 4, 4]
-  epochs: [1, 6, 6]
-  lr: [5.0e-05, 5.0e-05, 5.0e-05]
+  batch_size: [16]
+  epochs: [15]
+  lr: [5.0e-05]
