--- a/config_files/TrajFusionNet.yaml
+++ b/config_files/TrajFusionNet.yaml
@@ -31,7 +31,7 @@ model_opts:
       cell_type: gru
       backbone: vgg16
 exp_opts:
-  datasets: [jaad_beh]
+  datasets: [jaad_all]
   batch_size: [16]
   epochs: [15]
-  lr: [1.0e-06]
+  lr: [5.0e-06]
