--- a/config_files/TrajectoryTransformer.yaml
+++ b/config_files/TrajectoryTransformer.yaml
@@ -31,7 +31,7 @@ model_opts:
       cell_type: gru
       backbone: vgg16
 exp_opts:
-  datasets: [jaad_beh]
+  datasets: [jaad_all]
   batch_size: [64]
   epochs: [40]
   lr: [5.0e-05]
