--- a/config_files/TrajectoryTransformerb.yaml
+++ b/config_files/TrajectoryTransformerb.yaml
@@ -31,7 +31,7 @@ model_opts:
       cell_type: gru
       backbone: vgg16
 exp_opts:
-  datasets: [jaad_beh]
+  datasets: [jaad_all]
   batch_size: [16]
   epochs: [60]
   lr: [5.0e-06]
