--- a/config_files/TrajFusionNet.yaml
+++ b/config_files/TrajFusionNet.yaml
@@ -2,8 +2,9 @@ model_opts:
   model: TrajFusionNet
   apply_class_weights: True
   generator: True
-  obs_input_type: [scene_context_with_ped_overlays, scene_context_with_ped_overlays_previous,
-    box, veh_speed]
+  obs_input_type: [scene_context_with_ped_overlays, 
+                   scene_context_with_ped_overlays_previous,
+                   box, veh_speed]
   frameworks:
     pytorch: True
     hugging_faces: True
