--- a/config_files/TrajectoryTransformer.yaml
+++ b/config_files/TrajectoryTransformer.yaml
@@ -7,7 +7,7 @@ model_opts:
     pytorch: True
     hugging_faces: True
     multi-gpu: False
-  process_input_features: 
+  process_input_features:
     enabled: True
     indexes_to_stack: [0, 1]
     static_features_indexes: []
@@ -31,7 +31,7 @@ model_opts:
       cell_type: gru
       backbone: vgg16
 exp_opts:
-  datasets: [jaad_beh]
-  batch_size: [64, 4, 4]
-  epochs: [40, 40, 40]
-  lr: [5.0e-05, 5.0e-06, 5.0e-06]
+  datasets: [jaad_all]
+  batch_size: [64]
+  epochs: [40]
+  lr: [5.0e-05]
