--- a/config_files/SmallTrajectoryTransformer.yaml
+++ b/config_files/SmallTrajectoryTransformer.yaml
@@ -11,27 +11,9 @@ model_opts:
     enabled: True
     indexes_to_stack: [0, 1]
     static_features_indexes: []
-    super_resolution: False
-  vanilla_transformer:
-    normalize_boxes: True
-    pose_configs:
-      keep_most_stable_keypoints: True
-      add_distances_between_keypoints: False
-      add_angles_between_limb_and_axis: False
-      add_joints_angles: False
-      add_joints_angles_diff: False
-    input_embedding:
-      active: False
-    positional_encoding:
-      active: False
-    net_opts:
-      num_hidden_units: 128
-      global_pooling: avg
-      regularizer_val: 0.0001
-      cell_type: gru
-      backbone: vgg16
+  normalize_boxes: True
 exp_opts:
-  datasets: [jaad_beh]
-  batch_size: [64, 4, 4]
-  epochs: [40, 40, 40]
-  lr: [5.0e-05, 5.0e-06, 5.0e-06]
+  datasets: [pie]
+  batch_size: [64]
+  epochs: [40]
+  lr: [5.0e-05]
