--- a/config_files/SmallVAN.yaml
+++ b/config_files/SmallVAN.yaml
@@ -12,6 +12,6 @@ model_opts:
     static_features_indexes: [0]
 exp_opts:
   datasets: [pie]
-  batch_size: [16, 4, 4]
-  epochs: [15, 6, 6]
-  lr: [5.0e-05, 5.0e-06, 5.0e-06]
+  batch_size: [16]
+  epochs: [15]
+  lr: [5.0e-05]
