--- a/config_files/TrajectoryTransformer.yaml
+++ b/config_files/TrajectoryTransformer.yaml
@@ -13,7 +13,7 @@ model_opts:
     static_features_indexes: []
   normalize_boxes: True
 exp_opts:
-  datasets: [jaad_all]
+  datasets: [jaad_beh]
   batch_size: [64]
   epochs: [40]
   lr: [5.0e-05]
