--- a/config_files/TrajectoryTransformerb.yaml
+++ b/config_files/TrajectoryTransformerb.yaml
@@ -13,7 +13,7 @@ model_opts:
     static_features_indexes: []
   normalize_boxes: True
 exp_opts:
-  datasets: [jaad_all]
+  datasets: [jaad_beh]
   batch_size: [16]
-  epochs: [1]
+  epochs: [60]
   lr: [5.0e-06]
